# Receipt

./: .gitignore  CLAUDE.md  README.md  diagram.md  pyproject.toml
cashew_converter/: __init__.py  cli.py  learned_rules.json  models.py  rules.py  statement.py  ui_redesign.html  web.py  xlsx.py
scripts/: audit_exported_dates.py  categorize_misc.py  check_state.py  compare_exp_with_state_dates.py  compare_final_dates.py  compare_statecsv_exp_dates.py  fix_exp_dates_from_state.py  fix_exported_final.py  fix_pre_july_dates.py  list_categories.py  make_exp_like_old.py  restore_exported_final.py  sync_exported_dates_from_exp.py  update_categories.py
tests/: test_converter.py
