[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cashew-converter"
version = "0.1.0"
description = "Convert bank statements from XLSX or CSV into Cashew CSV format"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cashew-converter = "cashew_converter.cli:main"
cashew-converter-web = "cashew_converter.web:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["cashew_converter*"]
